<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".MainActivityInstructions">

    <TextView
        android:fontFamily="sans-serif-light"
        android:padding="16dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="24sp"
        android:text="@string/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginBottom="30dp"
        android:src="@drawable/hand"
        android:scaleType="fitCenter"
        android:id="@+id/instruction_img"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/instruction"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:padding="16dp"
        android:textSize="24sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="Wash hands regularly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:onClick="previousButton"
            android:id="@+id/pre"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="@drawable/button_shape"
            android:text="@string/pre"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="nextButton"
            android:id="@+id/next"
            android:background="@drawable/button_shape"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>